# ROBOCON2K18

./: .gitignore  CMakeLists.txt  README.md  Relay_Driver-cache.lib  Relay_Driver.kicad_pcb-bak  Relay_Driver.sch
Closed Loop Motor Driver/: AVRDUDE commands.txt
Closed Loop Motor Driver/I2C_Scanner/: I2C_Scanner.ino
Closed Loop Motor Driver/I2C_anything_Master/: I2C_anything_Master.ino
Closed Loop Motor Driver/I2C_anything_Master_2Slaves/: I2C_anything_Master_2Slaves.ino  motorDriver.cpp  motorDriver.h
Closed Loop Motor Driver/I2C_anything_Master_2Slaves_lib/: I2C_anything_Master_2Slaves_lib.ino  motorDriver.cpp  motorDriver.h
Closed Loop Motor Driver/I2C_anything_Master_CH/: I2C_anything_Master_CH.ino
Closed Loop Motor Driver/I2C_anything_Slave/: I2C_anything_Slave.ino
Closed Loop Motor Driver/I2C_anything_Slave_motor/: I2C_anything_Slave_motor.ino  I2C_anything_Slave_motor.ino.eightanaloginputs.hex  I2C_anything_Slave_motor.ino.standard.hex  I2C_anything_Slave_motor.ino.with_bootloader.eightanaloginputs.hex  I2C_anything_Slave_motor.ino.with_bootloader.standard.hex
Closed Loop Motor Driver/Measure_RPM/: Measure_RPM.ino  Measure_RPM.ino.standard.hex  Measure_RPM.ino.with_bootloader.standard.hex
Closed Loop Motor Driver/Motor_PID/: Motor_PID.ino
Closed Loop Motor Driver/PID_motor_001/: AutoPID.cpp  PID_motor_001.ino
Measure_RPM/: Measure_RPM.ino
Motor_PID/: Motor_PID.ino
Relay_Driver_4_motor/: Relay_Driver.kicad_pcb  Relay_Driver.net  Relay_Driver.pro  Relay_SPDT_OMRON-G5LE-1.kicad_mod
cytron/: cytron.ino
ps3test1/: ps3test1.ino
(+74 files in other folders)
